# a2aMobileAgent

samples/python/: .gitignore  pyproject.toml
samples/python/agent_uv/: agent_http_server.py  data_class.py  dingtalk.py
samples/python/agents/langgraph/: __main__.py  pyproject.toml  session_manager.py  task_manager.py
samples/python/agents/langgraph/mutil_agent/: action_protocol.json  agent.py  base_agent.py  mobile_agent.py
samples/python/agents/llama_index_file_chat/: __main__.py  mobile_agent.py  mobile_task_manager.py  test.py
samples/python/agents/llama_index_file_chat/agent_validation_utils/: __init__.py  data_utils.py  mcp_utils.py  prompt_constants.py  task_completion_analysis.py
samples/python/agents/llama_index_file_chat/agent_validation_utils/report/: task_completion_stats.csv  task_details.csv
samples/python/agents/llama_index_file_chat/agent_validation_utils/test_datas/: diff_level_1.json  diff_level_2.json  diff_level_3.json  diff_level_t.json
samples/python/aliyun/: README.md  client.py  instance_manager.py  setup.py
samples/python/common/server/: server.py
samples/python/hosts/cli/: __main__.py
samples/python/hosts/multiagent/: host_agent.py
samples/python/interact/: appium_base_action.py  manus_appium_action.py  molecular.py  swipe_helper.py
samples/python/mcp_servers/: appium_action_server.py  llamaindex_mcp_client.py  mcp_test_client.py
samples/python/my_connection/: my_http_server.py  my_websocket.py  socket_manager.py
